everything/gitops/apps/body/backend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: body-backend
  labels:
    app: body-backend
spec:
  type: ClusterIP
  selector:
    app: body-backend
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
