everything/gitops/apps/body/backend/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: body-backend
spec:
  ingressClassName: traefik
  rules:
    - host: api-body.i-tems.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: body-backend
                port:
                  number: 80
